--- a/_toc.yml
+++ b/_toc.yml
@@ -16,7 +16,7 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 
 format: jb-book
-root: example
+root: manuscript
 chapters:
   - file: elsarticle/README
   - file: ascelike-new/README
